quantum numbers update

--- a/genchem.html
+++ b/genchem.html
@@ -3,15 +3,6 @@
 <head>
 	<title>Chemistry</title>
 	<link rel="stylesheet" href="style.css">
-	<!-- 
-HEX: #f0f0f0 grayish white
-
-HEX: #c5d5c5 mint green
-
-HEX: #9fa9a3 pale olive
-
-HEX: #e3e0cc sand
- -->
 </head>
 <body>
 	<header>
@@ -38,85 +29,146 @@ HEX: #e3e0cc sand
 			</h4>
 		</div>
 	</header>
-	<br>
-	
-<!-- 
--bond lengths<br>
--abundances and masses<br>
--empirical formula<br>
--theoretical yield<br>
--azimuthal quantum numbers<br>
--faradays<br>
--->
+
 	<div class="back row">
-		<div class="column">
+		<div class="twocolumn">
 			<h2 id="empirical">Empirical Formula</h2>
-			<h3>Step one:</h3><p> Convert percent composition to grams.</p>
-			<h3>Step two:</h3><p> Multiply the quantities of the elements (in grams)<br> by their molar masses (in moles per grams).</p>
-			<h3>Step three:</h3><p> Divide the products (in moles) by the smallest molar mass. </p>
-			<h3>Step four:</h3><p> Round the products (in moles) to the nearest whole number. </p>
-			<h3>Step five:</h3><p> Substitute the whole number as the subscript of each element. </p>
-			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!<p>
+			<h3>Step one:</h3>
+			<p> Convert percent composition to grams.</p>
+			<h3>Step two:</h3>
+			<p> Multiply the quantities of the elements (in grams)<br> by their molar masses (in moles per grams).</p>
+			<h3>Step three:</h3>
+			<p> Divide the products (in moles) by the smallest molar mass. </p>
+			<h3>Step four:</h3>
+			<p> Round the products (in moles) to the nearest whole number. </p>
+			<h3>Step five:</h3>
+			<p> Substitute the whole number as the subscript of each element. </p>
+			<h3>Step six:</h3>
+			<p>Write the elements beside each other, and you're done!<p>
 		</div>
-		<div class="column">
+		<div class="twocolumn">
 			<h2 id="molecular">Molecular Formula</h2>
-			<h3>Step one:</h3><p>Multiply the subscript of the elements by their molar masses.</p>
-			<h3>Step two:</h3><p>Add the products.</p>
-			<h3>Step three:</h3><p> Divide the molar mass of the compound by the sum of the products. </p>
-			<h3>Step four:</h3><p>Multiply the subscript of the elements by the quotient, and you're done!</p>
+			<h3>Step one:</h3>
+			<p>Multiply the subscript of the elements by their molar masses.</p>
+			<h3>Step two:</h3>
+			<p>Add the products.</p>
+			<h3>Step three:</h3>
+			<p> Divide the molar mass of the compound by the sum of the products.</p>
+			<h3>Step four:</h3>
+			<p>Multiply the subscript of the elements by the quotient, and you're done!</p>
 		</div>
 	</div>
+
 	<div class="back1 row">
-		<div class="column">
-			<h2 id="theoretical">Limiting Reactant</h2>
+		<div class="twocolumn">
+			<h2 id="limitingreactant">Limiting Reactant</h2>
 			<p>The limiting reactant has the smallest moles of an element per<br> coefficent of an element.</p>
-			<h3>Step one:</h3><p>Convert the grams of the reactants to moles. Multiply by the molar mass.</p>
-			<h3>Step two:</h3><p>Convert the reactant unit to the product unit. Multiply the moles of the reactant by the ratio of the coefficient of the reactant to the coefficient of the product.</p>
-			<h3>Step three:</h3><p>The smallest product is the theoretical yield, and the reactant it came from is the limiting reactant.</p>
+			<h3>Step one:</h3>
+			<p>Convert the grams of the reactants to moles. Multiply by the molar mass.</p>
+			<h3>Step two:</h3>
+			<p>Convert the reactant unit to the product unit. Multiply the moles of the reactant by the ratio of the coefficient of the reactant to the coefficient of the product.</p>
+			<h3>Step three:</h3>
+			<p>The smallest product is the theoretical yield, and the reactant it came from is the limiting reactant.</p>
 		</div>
-		<div class="column">
-			<h2 id="percent">Excess Reactant</h2>
+		<div class="twocolumn">
+			<h2 id="excessreactant">Excess Reactant</h2>
 			<p>The excess reactant has the largest moles of an element per<br> coefficent of an element.</p>
-			<h3>Step one:</h3><p>Convert the grams of the reactants to moles. Multiply by the molar mass.</p>
-			<h3>Step two:</h3><p>Convert the reactant unit to the product unit. Multiply the moles of the reactant by the ratio of the coefficient of the reactant to the coefficient of the product.</p>
-			<h3>Step three:</h3><p>The one that resulted into a larger product is the limiting reactant of the chemical reaction.</p>
+			<h3>Step one:</h3>
+			<p>Convert the grams of the reactants to moles. Multiply by the molar mass.</p>
+			<h3>Step two:</h3>
+			<p>Convert the reactant unit to the product unit. Multiply the moles of the reactant by the ratio of the coefficient of the reactant to the coefficient of the product.</p>
+			<h3>Step three:</h3>
+			<p>The one that resulted into a larger product is the excess reactant of the chemical reaction.</p>
 		</div>
 	</div>
+
 	<div class="back2 row">
-		<div class="column">
+		<div class="twocolumn">
 			<h2 id="theoretical">Theoretical Yield</h2>
 			<p>The theoretical yield is the maximum yield possible for the reactants.</p>
-			<h3>Step one:</h3><p>Convert the grams of the reactants to moles. Multiply by the molar mass.</p>
-			<h3>Step two:</h3><p>Convert the reactant unit to the product unit. Multiply the moles of the reactant by the ratio of the coefficient of the reactant to the coefficient of the product.</p>
-			<h3>Step three:</h3><p>The smallest product is the theoretical yield, and the reactant it came from is the limiting reactant.</p>
+			<h3>Step one:</h3>
+			<p>Convert the grams of the reactants to moles. Multiply by the molar mass.</p>
+			<h3>Step two:</h3>
+			<p>Convert the reactant unit to the product unit. Multiply the moles of the reactant by the ratio of the coefficient of the reactant to the coefficient of the product.</p>
+			<h3>Step three:</h3>
+			<p>The smallest product is the theoretical yield, and the reactant it came from is the limiting reactant.</p>
 		</div>
-		<div class="column">
+		<div class="twocolumn">
 			<h2 id="percent">Percent Yield</h2>
 			<p>The percent yield is 100% times the actual yield divided by the theoretical yield.</p>
-			<h3>Step one:</h3><p>Get the theoretical yield.</p>
-			<h3>Step two:</h3><p>Substitute the theoretical yield and the actual yield in the formula. The actual yield is always smaller than the theoretical yield.</p>
-			<h3>Step three:</h3><p>Divide the actual yield by the theoretical yield, then multiply by 100%. The answer is the percent yield of the reaction</p>
+			<h3>Step one:</h3>
+			<p>Get the theoretical yield.</p>
+			<h3>Step two:</h3>
+			<p>Substitute the theoretical yield and the actual yield in the formula. The actual yield is always smaller than the theoretical yield.</p>
+			<h3>Step three:</h3>
+			<p>Divide the actual yield by the theoretical yield, then multiply by 100%. The answer is the percent yield of the reaction</p>
 		</div>
 	</div>
+
 	<div class="back row">
-		<div class="column">
-			<h2 id="empirical">Empirical Formula</h2>
-			<h3>Step one:</h3><p> Convert percent composition to grams.</p>
-			<h3>Step two:</h3><p> Multiply the quantities of the elements (in grams)<br> by their molar masses (in moles per grams).</p>
-			<h3>Step three:</h3><p> Divide the products (in moles) by the smallest molar mass. </p>
-			<h3>Step four:</h3><p> Round the products (in moles) to the nearest whole number. </p>
-			<h3>Step five:</h3><p> Substitute the whole number as the subscript of each element. </p>
-			<h3>Step six:</h3><p>Write the elements beside each other, and you're done!<p>
+		<h1>Quantum Numbers</h1>
+		<div class="fourcolumn">
+			<h2 id="molecular">
+				<i><font face="times new roman">m</font></i>
+			</h2>
+			<p>
+				<ul>
+					<li>Principal Quantum Number</li>
+					<li>The energy level of an electron</li>
+					<li>A natural number (1, 2, 3, ...)</li>
+					<li>The larger the number, the farther away from the nucleus</li>
+				</ul>
+			</p>
 		</div>
-		<div class="column">
-			<h2 id="molecular">Molecular Formula</h2>
-			<h3>Step one:</h3><p>Multiply the subscript of the elements by their molar masses.</p>
-			<h3>Step two:</h3><p>Add the products.</p>
-			<h3>Step three:</h3><p> Divide the molar mass of the compound by the sum of the products. </p>
-			<h3>Step four:</h3><p>Multiply the subscript of the elements by the quotient, and you're done!</p>
+		<div class="fourcolumn">
+			<h2 id="molecular">
+				<i><font face="times new roman">l</font></i>
+			</h2>
+			<p>
+				<ul>
+					<li>Angular Momentum Quantum Number</li>
+					<li>
+					Describes the shape of the orbital
+						<ul><i>
+							<li>When l = 0, s-orbital</li>
+							<li>When l = 1, p-orbital</li>
+							<li>When l = 2, d-orbital</li>
+							<li>When l = 3, f-orbital</li>
+						</i></ul>
+					</li>
+					<li>0 to (<i>n - 1</i>)</li>
+				</ul>
+			</p>
+		</div>
+		<div class="fourcolumn">
+			<h2 id="molecular">
+				<i><font face="times new roman">m<sub>l</sub></font></i>
+			</h2>
+			<p>
+				<ul>
+					<li>Magnetic Quantum Number</li>
+					<li>Determines how many orbitals<br> of a type per energy level</li>
+					<li>Describes a specific orbital<br>amongst a set</li>
+					<li><i>-l &nbsp;&le;&nbsp; m<sub>l</sub> &nbsp;&le;&nbsp; l</i></li>
+				</ul>
+			</p>
+		</div>
+		<div class="fourcolumn">
+			<h2 id="molecular">
+				<i><font face="times new roman">m<sub>s</sub></font></i>
+			</h2>
+			<p>
+				<ul>
+					<li>Spin Quantum Number</li>
+					<li>+&half;&nbsp; or &nbsp;-&half;</li>
+					<li>Describes the spin of an electron</li>
+					<li>Spins are denoted as &uarr; and &darr;<br> for +&half;&nbsp; and &nbsp;-&half; respectively </li>
+				</ul>
+			</p>
 		</div>
 	</div>
-<br>
+
+	<br>
 	<center>
 		<footer>
 			Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
