--- a/index.html
+++ b/index.html
@@ -535,7 +535,8 @@
 	<div>
 		<center>
 			<footer>
-				Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
+				Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a><br>
+				Also by <font style="letter-spacing: 2px; font-weight: bold;">GIANNA</font>: <a href="https://giannacrisha.github.io/physics/" target="_blank"><h1 id="physics">PHYSICS</h1></a>
 			</footer>
 		<center>
 	</div>
