--- a/genchem.html
+++ b/genchem.html
@@ -170,8 +170,14 @@
 	<br>
 	<center>
 		<footer>
-			Copyright &copy; 2021 by <a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a>
-		</footer>
+				Copyright &copy; 2021 by
+				<a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a><br>
+				Also by
+				<font style="letter-spacing: 2px; font-weight: bold;">GIANNA</font>: 
+				<a href="https://giannacrisha.github.io/physics/" target="_blank">
+					<h1 id="physics">PHYSICS</h1>
+				</a>
+			</footer>
 	<center>
 </body>
 </html>
