--- a/index.html
+++ b/index.html
@@ -538,10 +538,11 @@
 				Copyright &copy; 2021 by
 				<a href="https://github.com/giannacrisha" id="gitlink">Gianna Saludo</a><br>
 				Also by
-				<font style="letter-spacing: 2px; font-weight: bold;">GIANNA</font>: 
-				<a href="https://giannacrisha.github.io/physics/" target="_blank">
-					<h1 id="physics">PHYSICS</h1>
-				</a>
+				<font style="letter-spacing: 2px; font-weight: bold;">GIANNA</font>:
+				<br> 
+				<h1 id="physics">
+					<a  id="physics" href="https://giannacrisha.github.io/physics/" target="_blank">PHYSICS</a>
+				</h1>
 			</footer>
 		<center>
 	</div>
