--- a/genchem.html
+++ b/genchem.html
@@ -105,7 +105,7 @@
 	</div>
 
 	<div class="back row">
-		<h1>Quantum Numbers</h1>
+		<center><h1>Quantum Numbers</h1></center>
 		<div class="fourcolumn">
 			<h2 id="molecular">
 				<i><font face="times new roman">m</font></i>
